Fix margin spacing

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -121,6 +121,7 @@ body > footer
 
 .navmore
 {
+    margin: 8px 0;
     text-align: center;
 
     a
@@ -161,7 +162,7 @@ body > footer
 {
     aside
     {
-        margin: 24px 0 0;
+        margin: 16px 0 0;
     }
 
     header > h1
